Updated Planning in Final.  Saved Plan to README.md

--- a/final.ipynb
+++ b/final.ipynb
@@ -2,55 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "52bdf180",
-   "metadata": {},
-   "source": [
-    "### Introduce yourself and your project goals at the very beginning of your notebook walkthrough."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f61c2382",
-   "metadata": {},
-   "source": [
-    "### Summarize your findings at the beginning like you would for an Executive Summary. Just because you don't have a slide deck for this presentation, doesn't mean you throw out everything you learned from Storytelling."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5deb95b7",
-   "metadata": {},
-   "source": [
-    "### Walk us through the analysis you did to answer our questions and that lead to your findings. Relationships should be visualized and takeaways documented. Please clearly call out the questions and answers you are analyzing as well as offer insights and recommendations based on your findings."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e27a0f92",
-   "metadata": {},
-   "source": [
-    "### For example: If you find that month-to-month customers churn more, we won't be surprised, but Telco is not getting rid of that plan. The fact that customers churn is not because they can; it's because they can and they are motivated to do so. We want your insights into why they are motivated to do so. We realize you will not be able to do a full causal experiment, but we would like to see some solid evidence of your conclusions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a9b3f25",
-   "metadata": {},
-   "source": [
-    "### Finish with key takeaways, recommendations, and next steps and be prepared to answer questions from the data science team about your project."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6fa9cc7a",
-   "metadata": {},
-   "source": [
-    "### Remember you have a time limit of 5 minutes for your presentation. Make sure you practice your notebook walkthrough keeping this time limit in mind; it will go by very quickly."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "70db092c",
+   "id": "0e74e0ef",
    "metadata": {},
    "source": [
     "# <span style=\"background-color:#00FF00\">Plan</span> -> Aquire -> Prepare -> Explore -> Model -> Deliver"
@@ -58,16 +10,98 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94c23ca1",
+   "id": "0dd38c01",
    "metadata": {},
    "source": [
     "\n",
-    "<p style=\"font-family:courier; font-size:150%;\">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Why are our customers churning?  To try and understand this problem, one can break down the problems into smaller steps.  These steps will be broken down and descibed in detail. <br><br>\n",
-    "<b>Step 1.</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Explore the SQL Database. Create a SQL script to acquire all the features. Create a funtion in python that can use previously defined SQL script to acquire the data.<br><br>\n",
-    "<b>Step 2.</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Once the data can be imported into a pandas data frame, we can prepare the data for modeling.  In this stage I will be dropping features, removing duplicates, finding null values, deciding what do with the null values, and encoding my features using pd.get_dummies().<br><br>\n",
-    "<b>Step 3.</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In the explore phase, I plan on running the predefined explore_univariate(), explore_bivariate(), and explore_multivariate() from the explore.py file.  I plan on looking through the graphs and evaluate each feature to see if they play a part in churn.  If my exploration concludes its a great feature to use, then I will include that feature in my model.<br><br>\n",
-    "<b>Step 4.</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I plan on creating three models. I will be using a DecisionTreeClassifier, RandomForestClassifier, and KNeighborsClassifier.  After I make the models I will fit the models and then I will use the models.  I will use the accuracy of the train and validate data to determine if the difference is within my predefined threshold.  Once I have filtered out the models that have passed my threshold allocation, I can then pick the model with highest validate accuracy to run on my final test data.<br><br></p>\n",
-    "\n",
+    "<p style=\"font-family:courier; font-size:150%;\">\n",
+    "<b>Step 1</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Create a new repository, update the .gitignore, create a README.md with the data dictionary, project and business goals, and come up with initial hypotheses.<br><br>\n",
+    "<b>Step 2</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Explore the SQL Codeup database. Create a SQL script to select all the features and observations. Create a function in python called get_telco_data() that uses the previously defined SQL script to pull the data from the Codeup database then save the new file as acquire.py.<br><br>\n",
+    "<b>Step 3</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Create a function and name it clean_telco().  This function will drop any useless features, remove duplicates, double check data-types, find any null values, decide what do with null values, and encode the features using pd.get_dummies(). This clean data function will be saved on a new file called prepare.py<br><br>\n",
+    "<b>Step 4</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;On the same prepare file, create split_telco_data(). This function will split the cleaned data into three data sets named train, validate, and test. Lastly, create prep_telco_data() that will call clean_telco() and split_telco_data(). It will return the three data sets train, validate, and test.<br><br>\n",
+    "<b>Step 5</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In the explore phase, I plan on running the predefined explore_univariate(), explore_bivariate(), and explore_multivariate() by importing the explore.py file.  I plan on looking through the graphs and evaluate each feature to see if they play a part in churn.  Exploration will also include two hypotheses, setting of alpha, statistical tests, rejecting or failing to reject the null hypothesis, and documentation of the findings and takeaways.<br><br>\n",
+    "<b>Step 6</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Once exploration is complete and I have defined which features I plan on using I will then create three machine learning models plus my baseline model.  I will establish a baseline accuracy and document well.  For my machine learning models, I will be using a DecisionTreeClassifier, RandomForestClassifier, and KNeighborsClassifier.  After I MAKE the models I will FIT the models and then I will USE the models.  I will use the accuracy of the train and validate data to determine if the difference is within my predefined threshold.  Once I have filtered out the models that have passed, I can then pick the model with highest validate accuracy to run on my final test data.<br><br>\n",
+    "<b>Step 7</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Create csv file with the measurement id, the probability of the target values, and the model's prediction for each observation in my test dataset.<br><br>\n",
+    "<b>Step 8</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lastly, I will document conclusions, recommendations, and takeaways in the final report notebook.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "189edfa6",
+   "metadata": {},
+   "source": [
+    "# Plan -> <span style=\"background-color:#00FF00\">Acquire</span> -> Prepare -> Explore -> Model -> Deliver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f17ecb8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67a194cf",
+   "metadata": {},
+   "source": [
+    "# Plan -> Acquire -> <span style=\"background-color:#00FF00\">Prepare</span> -> Explore -> Model -> Deliver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0b910c6c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44348fa6",
+   "metadata": {},
+   "source": [
+    "# Plan -> Acquire -> Prepare -> <span style=\"background-color:#00FF00\">Explore</span> -> Model -> Deliver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "788c3fa4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69f25565",
+   "metadata": {},
+   "source": [
+    "# Plan -> Acquire -> Prepare -> Explore -> <span style=\"background-color:#00FF00\">Model</span> -> Deliver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45f66a12",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "792b8a1b",
+   "metadata": {},
+   "source": [
+    "# Plan -> Acquire -> Prepare -> Explore -> Model -> <span style=\"background-color:#00FF00\">Deliver</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acbaa423",
+   "metadata": {},
+   "source": [
     "# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$H_{0}$ \n",
     "<p style=\"font-family:courier; font-size:150%;\">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;There is no difference in the rate of churn for customers who pay with different payment types.<br></p>\n",
     "\n",
@@ -77,80 +111,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4ecd62c9",
+   "id": "79aa99f1",
    "metadata": {},
    "source": [
-    "# Plan -> <span style=\"background-color:#00FF00\">Acquire</span> -> Prepare -> Explore -> Model -> Deliver"
+    "### Introduce yourself and your project goals at the very beginning of your notebook walkthrough.\n",
+    "\n",
+    "### Summarize your findings at the beginning like you would for an Executive Summary. Just because you don't have a slide deck for this presentation, doesn't mean you throw out everything you learned from Storytelling.\n",
+    "\n",
+    "### Walk us through the analysis you did to answer our questions and that lead to your findings. Relationships should be visualized and takeaways documented. Please clearly call out the questions and answers you are analyzing as well as offer insights and recommendations based on your findings.\n",
+    "\n",
+    "### For example: If you find that month-to-month customers churn more, we won't be surprised, but Telco is not getting rid of that plan. The fact that customers churn is not because they can; it's because they can and they are motivated to do so. We want your insights into why they are motivated to do so. We realize you will not be able to do a full causal experiment, but we would like to see some solid evidence of your conclusions.\n",
+    "\n",
+    "### Finish with key takeaways, recommendations, and next steps and be prepared to answer questions from the data science team about your project.\n",
+    "\n",
+    "### Remember you have a time limit of 5 minutes for your presentation. Make sure you practice your notebook walkthrough keeping this time limit in mind; it will go by very quickly."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "785569dc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96bae45e",
-   "metadata": {},
-   "source": [
-    "# Plan -> Acquire -> <span style=\"background-color:#00FF00\">Prepare</span> -> Explore -> Model -> Deliver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97a90a51",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f62edc76",
-   "metadata": {},
-   "source": [
-    "# Plan -> Acquire -> Prepare -> <span style=\"background-color:#00FF00\">Explore</span> -> Model -> Deliver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f75ffdda",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "748f638a",
-   "metadata": {},
-   "source": [
-    "# Plan -> Acquire -> Prepare -> Explore -> <span style=\"background-color:#00FF00\">Model</span> -> Deliver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "70fadac2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "92dc1b7f",
-   "metadata": {},
-   "source": [
-    "# Plan -> Acquire -> Prepare -> Explore -> Model -> <span style=\"background-color:#00FF00\">Deliver</span>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a462dfc1",
+   "id": "f8b3cc2a",
    "metadata": {},
    "outputs": [],
    "source": []
