--- a/final.ipynb
+++ b/final.ipynb
@@ -1,8 +1,49 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "4c51b912",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'get_iris_data' from 'acquire' (/Users/dulcechavez/codeup-data-science/Telco-Classification-Project/acquire.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-9876ff5b915f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0;31m# Custom module imports\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0macquire\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mget_iris_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msummarize_df\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprepare\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mexplore\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'get_iris_data' from 'acquire' (/Users/dulcechavez/codeup-data-science/Telco-Classification-Project/acquire.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import os\n",
+    "import scipy.stats as stats\n",
+    "\n",
+    "# Viz imports\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "# Modeling imports\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.tree import DecisionTreeClassifier, plot_tree, export_text\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import classification_report, confusion_matrix, accuracy_score\n",
+    "\n",
+    "# Custom module imports\n",
+    "from acquire import get_iris_data, summarize_df\n",
+    "import prepare\n",
+    "import explore\n",
+    "from model import score_models"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "0e74e0ef",
+   "id": "47d1ab18",
    "metadata": {},
    "source": [
     "# <span style=\"background-color:#00FF00\">Plan</span> -> Aquire -> Prepare -> Explore -> Model -> Deliver"
@@ -10,24 +51,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dd38c01",
+   "id": "a69396a1",
    "metadata": {},
    "source": [
     "\n",
     "<p style=\"font-family:courier; font-size:150%;\">\n",
     "<b>Step 1</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Create a new repository, update the .gitignore, create a README.md with the data dictionary, project and business goals, and come up with initial hypotheses.<br><br>\n",
-    "<b>Step 2</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Explore the SQL Codeup database. Create a SQL script to select all the features and observations. Create a function in python called get_telco_data() that uses the previously defined SQL script to pull the data from the Codeup database then save the new file as acquire.py.<br><br>\n",
-    "<b>Step 3</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Create a function and name it clean_telco().  This function will drop any useless features, remove duplicates, double check data-types, find any null values, decide what do with null values, and encode the features using pd.get_dummies(). This clean data function will be saved on a new file called prepare.py<br><br>\n",
-    "<b>Step 4</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;On the same prepare file, create split_telco_data(). This function will split the cleaned data into three data sets named train, validate, and test. Lastly, create prep_telco_data() that will call clean_telco() and split_telco_data(). It will return the three data sets train, validate, and test.<br><br>\n",
-    "<b>Step 5</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;In the explore phase, I plan on running the predefined explore_univariate(), explore_bivariate(), and explore_multivariate() by importing the explore.py file.  I plan on looking through the graphs and evaluate each feature to see if they play a part in churn.  Exploration will also include two hypotheses, setting of alpha, statistical tests, rejecting or failing to reject the null hypothesis, and documentation of the findings and takeaways.<br><br>\n",
-    "<b>Step 6</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Once exploration is complete and I have defined which features I plan on using I will then create three machine learning models plus my baseline model.  I will establish a baseline accuracy and document well.  For my machine learning models, I will be using a DecisionTreeClassifier, RandomForestClassifier, and KNeighborsClassifier.  After I MAKE the models I will FIT the models and then I will USE the models.  I will use the accuracy of the train and validate data to determine if the difference is within my predefined threshold.  Once I have filtered out the models that have passed, I can then pick the model with highest validate accuracy to run on my final test data.<br><br>\n",
+    "<b>Step 2</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Create a python function and SQL script to select all the features and observations from the codeup database.<br><br>\n",
+    "<b>Step 3</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Clean the data, drop any useless features, remove duplicates, double check data-types, find any null values, decide what do with null values, and encode the features.<br><br>\n",
+    "<b>Step 4</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Split the cleaned data into three data sets named train, validate, and test.<br><br>\n",
+    "<b>Step 5</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Explore the data, look through the graphs and evaluate each feature to see if they play a part in churn.  Exploration will also include two hypotheses, setting of alpha, statistical tests, rejecting or failing to reject the null hypothesis, and documentation of the findings and takeaways.<br><br>\n",
+    "<b>Step 6</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Model, create three machine learning models plus a baseline model.  Will be using a DecisionTreeClassifier, RandomForestClassifier, and KNeighborsClassifier.  Evaluate models on train and validate datasets.  Pick the model with highest validate accuracy to run on my final test data.<br><br>\n",
     "<b>Step 7</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Create csv file with the measurement id, the probability of the target values, and the model's prediction for each observation in my test dataset.<br><br>\n",
-    "<b>Step 8</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lastly, I will document conclusions, recommendations, and takeaways in the final report notebook.</p>"
+    "<b>Step 8</b><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Lastly, I will document conclusions, recommendations, and takeaways in the final report notebook.<br><br><br>For a more detailed and in depth plan, refer to the README.MD</p>\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "189edfa6",
+   "id": "40cce1d3",
    "metadata": {},
    "source": [
     "# Plan -> <span style=\"background-color:#00FF00\">Acquire</span> -> Prepare -> Explore -> Model -> Deliver"
@@ -36,14 +78,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f17ecb8b",
+   "id": "8703d259",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "67a194cf",
+   "id": "1fe72b4c",
    "metadata": {},
    "source": [
     "# Plan -> Acquire -> <span style=\"background-color:#00FF00\">Prepare</span> -> Explore -> Model -> Deliver"
@@ -52,14 +94,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b910c6c",
+   "id": "2ebacf88",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "44348fa6",
+   "id": "b35494c5",
    "metadata": {},
    "source": [
     "# Plan -> Acquire -> Prepare -> <span style=\"background-color:#00FF00\">Explore</span> -> Model -> Deliver"
@@ -68,14 +110,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "788c3fa4",
+   "id": "789e4b5a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "69f25565",
+   "id": "93ca595a",
    "metadata": {},
    "source": [
     "# Plan -> Acquire -> Prepare -> Explore -> <span style=\"background-color:#00FF00\">Model</span> -> Deliver"
@@ -84,14 +126,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45f66a12",
+   "id": "6865ccf8",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "792b8a1b",
+   "id": "a5d1b889",
    "metadata": {},
    "source": [
     "# Plan -> Acquire -> Prepare -> Explore -> Model -> <span style=\"background-color:#00FF00\">Deliver</span>"
@@ -99,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "acbaa423",
+   "id": "fb1892c5",
    "metadata": {},
    "source": [
     "# &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;$H_{0}$ \n",
@@ -111,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79aa99f1",
+   "id": "b195745a",
    "metadata": {},
    "source": [
     "### Introduce yourself and your project goals at the very beginning of your notebook walkthrough.\n",
@@ -130,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8b3cc2a",
+   "id": "d57ae724",
    "metadata": {},
    "outputs": [],
    "source": []
